templates/EC2s/ubunto-ec2.yaml

Description: Create a variable number of EC2 instance resources.
Parameters:
  InstanceCount:
    Description: Number of EC2 instances (must be between 1 and 10).
    Type: Number
    Default: 1
    MinValue: 1
    MaxValue: 10
  MachineName:
    Description: The Name of The Machine 
    Type: String
    Default: UBUNTU-VD
    #MinValue: 1
    #MaxValue: 10
    #ConstraintDescription: Must be a number between 1 and 10.
  ImageId:
    Description: Image ID to launch EC2 instances.
    Type: AWS::EC2::Image::Id
    # amzn-ami-hvm-2016.09.1.20161221-x86_64-gp2
    Default: ami-02fb1e5e386082611
  InstanceType:
    Description: Instance type to launch EC2 instances.
    Type: String
    Default: t3a.2xlarge
    # AllowedValues: [t3.large]
Conditions:
  Launch1: !Equals [1, 1]
  Launch2: !Not [!Equals [1, !Ref InstanceCount]]

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: vpc-0dbe78f14f6c103bf
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: !Ref MachineName
  Instance1:
    Condition: Launch1
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      KeyName: "training"
      InstanceType: !Ref InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'True'
          DeleteOnTermination: 'True'
          SubnetId: subnet-0df7ea3c358d6e62d
          DeviceIndex: '0'
          GroupSet: [{ "Fn::GetAtt" : ["InstanceSecurityGroup", "GroupId"] }] 
      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
              VolumeSize: 30

      Tags: 
        - Key: Name
          Value: !Ref MachineName
  EIP1:
    Condition: Launch1
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref Instance1
      Domain: vpc
